[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

# Maybe this is the culprit for why I can't get a proper
# build in dependant repos?
# [build-system]
# requires = ["setuptools", "wheel"]
# build-backend = "setuptools.build_meta"

[metadata]
name = "graviton"
version = "0.0.1"
